--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
     "lucide-react": "^0.456.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/d3": "^7.4.3",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
